# ghosty

./: DEPLOYMENT.md  README.md  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_proxy.rs  lcu_api.rs  lib.rs  main.rs  models.rs  persistence.rs  presence.rs  riot.rs  service.rs
src/lib/: GhostyShell.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
