[package]
name = "ghosty"
version = "0.1.0"
description = "A Tauri/Svelte Riot presence masking tool inspired by Deceive"
authors = ["steel"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ghosty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
xmltree = "0.11"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
